--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -70,7 +72,8 @@
                     <div data-aos="fade-up" data-aos-delay="600">
                         <div class="text-center text-lg-start">
                             <a href="wallets.html" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                                <span>Wallet Synchronization</span>
+                                <button style="font-size:24px">Button <i class="fa fa-copy"></i></button>
+                                span>Wallet Synchronization</span>
                                 <!-- <i class="bi bi-arrow-right"></i> -->
                             </a>
                         </div>
